welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:9: error: Boolean does not take parameters
    else (Math.abs(10-a)== Math.abs(10-b)){
                                          ^